Items are growing instead of wrapping to next line - seeing if this fixes.

--- a/src/GameItem.css
+++ b/src/GameItem.css
@@ -4,6 +4,7 @@
     text-align: center;
     padding: 5px;
     list-style: none;
+    width: fit-contet;
 }
 
 .game-item:hover{
